example.spring/src/main/java/com/example/demo/configuration/http/BaseResponseCode.java
package com.example.demo.configuration.http;

public enum BaseResponseCode {
	
	SUCCESS,
	ERROR, // error
	DATA_IS_NULL, // null
	VALIDATE_REQUIRED, // 필수 체크
	;
	
}
